# mpd-spotify-cover

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  mpd_api.rs  spotify_api.rs  util.rs
src/modes/: interactive_auth.rs  mod.rs  track_cover_url.rs
