[package]
name = "spotify-track-cover"
version = "1.0.0"
authors = ["skidunion"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
toml = "0.5.9"
datetime = "0.5.2"
log = "0.4.16"
simplelog = "0.12.0"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.10"
features = ["json", "blocking"]